# ied-otst

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
app/: db.py  deps.py  main.py  models.py  schemas.py
app/routers/: auth.py
docs/: project-recap.html  projectBrief.md  systemPatterns.md
docs/obsidian_vault/: 03_Users_DP.md  05_Calendar_PRD.md  06_Journal_DP.md  06_ournal_PRD.md  07_WorldMap_DP.md
docs/obsidian_vault/.obsidian/: workspace.json
obsidian_vault/: 01_DomainModel.md  02_ArchitecturePlan.md  03_Users_PRD.md  04_Chat_DP.md  04_Chat_PRD.md  05_Calendar_DP.md  07_WorldMap_PRD.md
src/: main.py
src/app/: config.py  models.py  schemas.py  security.py
src/app/routers/: auth.py  lobbies.py
tasks/: prd-open-table-rpg-sessions-user-lobby-creation-mvp.md  prd-user-lobby-creation.json  prd.json
tests/: test_true.py
tests/app/routers/auth/: TestPlan_gm_register.md  test_gm_register.py
