[project]
name = "ied-otst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.129.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true

[tool.poe.tasks]
test = "uv run pytest tests/"
lint = "uv run ruff check --fix src/"
format = "uv run ruff format src/"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "ruff==0.15.1",
]
